# Research-RetrievalBench

./: .gitignore  BLOG.md  DESIGN_DOC.md  PAPER_DRAFT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
blog/: retrievalbench.md
paper/: README.md  main.tex  refs.bib
results/: README.md  csi_esi_summary.json
results/_fullcorpus_archive/: auslegalqa.json  quora.json  scifact.json
results/arguana/: chunking_results.json
results/auslegalqa/: chunking_results.json
results/dbpedia-entity/: chunking_results.json
results/fever/: chunking_results.json
results/fiqa/: chunking_results.json
results/hotpotqa/: chunking_results.json
results/nfcorpus/: chunking_results.json
results/nq/: chunking_results.json
results/quora/: chunking_results.json
results/scidocs/: chunking_results.json
results/scifact/: chunking_results.json  legacy_summary.json  ranked_lists.json  saturation.json
results/touche-2020/: chunking_results.json  ranked_lists.json
results/trec-covid/: chunking_results.json
scripts/: analyze_csi_esi_matrix.py  analyze_saturation.py  build_pareto.py  probe_quora_rerank.py  run_chunking_pipeline.py  run_demo.py  run_experiment.py  run_real_retrieval.py
src/retrievalbench/: __init__.py  core.py  cost.py  data.py  evaluate.py  scheduling.py
src/retrievalbench/pipeline/: __init__.py  config.py  loaders.py  metrics.py  rerankers.py  run.py
src/retrievalbench/pipeline/chunkers/: __init__.py  generic.py  structure_aware.py
tests/: test_core.py  test_cost.py  test_data.py  test_evaluate.py  test_scheduling.py
(+3 files in other folders)
